--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pixi test</title>
     <link rel="stylesheet" href="./style.css" />
+    <link rel="shortcut icon" type="image/x-icon"  src="./favicon.ico"> 
   </head>
   <body>
     <script src="./script/pixiSource.js"></script>
@@ -16,6 +17,5 @@
         type = "canvas";
       }PIXI.utils.sayHello(type);
     </script>
-
   </body>
 </html>
